--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,30 +1,53 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+
 
 :root {
 }
 
 * {
-  margin:0;
-  padding:0;
   box-sizing: border-box;
+}
 
-  /* height: 100%;
-  width: 100%; */
+*:not(ul, li) {
+  margin: 0;
+  padding: 0;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #3E7B27;
+    --foreground: #85A947;
   }
+  }
+
+header {
+  background-color: #3E7B27;
+  flex: 1 1 3;
+  width: 100%;
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   /* color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif; */
+}
+
+.container0 {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
+main {
+  background-color: #85A947;
+  flex: 1 1 7;
+  width: 100%;
+}
+
+ul {
+  list-style-type: circle;
 }
 
 li {
