--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,8 +14,10 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --darkgreen: #123524;
     --background: #3E7B27;
     --foreground: #85A947;
+    --textcolor: #EFE3C2;
   }
   }
 
