--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,3 @@
-
-
 :root {
 }
 
@@ -19,12 +17,6 @@
     --foreground: #85A947;
     --textcolor: #EFE3C2;
   }
-  }
-
-header {
-  background-color: #3E7B27;
-  flex: 1 1 3;
-  width: 100%;
 }
 
 body {
@@ -36,16 +28,81 @@ body {
 }
 
 .container0 {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+  /* children */
+  display: block;
+  position: relative;
+  
+  /* size */
+  height: 100vh;
+  width: 100vw;
+
+  /* edges */
+  margin: 0;
+  border: 0;
+  padding: 0;
+
+  /* styles */
+  overflow: hidden;
+
+  /* interior */
+  background-color: #178925;
+}
+
+header {
+  height: 10%;
   width: 100%;
+
+  color: white;
+}
+
+nav {
+  /* position */
+  order: -1;
+  
+  /* size */
+  height: 100%;
+  flex: 1;
+
+  /* outlines */
+  margin: 0;
+  border: 0;
+  padding: 0;
+
+  /* styles */
+  list-style-type: none;
+  overflow: auto;
 }
 
 main {
-  background-color: #85A947;
-  flex: 1 1 7;
+  /* children */
+  display: flex;
+  flex-direction: column;
+
+  /* position */
+  order: 0;
+
+  /* size */
+  height: 100%;
+  flex: 9;
+
+  /* edges */
+  margin: 0;
+  border: 0;
+  padding: 0;
+  box-shadow: 0 0 5px 3px gray inset;
+
+  background-color: #f1ead7;
+}
+
+.notHeader {
+  /* children */
+  display: flex;
+
+  /* size */
+  height: 90%;
   width: 100%;
+
+  background-color: #90ff6d;
 }
 
 ul {
