--- a/src/app/resume.css
+++ b/src/app/resume.css
@@ -76,3 +76,12 @@ p:not(.introText) {
     justify-content: center;
     align-items: center;
 }
+
+.logo {
+    height: 100%;
+    flex: 1;
+}
+
+.jobText {
+    flex: 9;
+}
