--- a/src/app/resume.css
+++ b/src/app/resume.css
@@ -18,6 +18,10 @@ h2, h3 {
     margin: 0% 1%;
 }
 
+h2 {
+    padding-top: 1%;
+}
+
 h4 {
     margin: 0% 2%;
 }
@@ -26,6 +30,18 @@ i {
     padding-right: 2%;
     width: 50%;
     text-align: right;
+}
+
+img {
+    max-width: 100%;
+    max-height: 100%;
+    display: inline-block;
+    vertical-align: bottom;
+    object-fit: scale-down;
+}
+
+img:not(.introPic) {
+    padding: 5%;
 }
 
 #intro {
@@ -50,8 +66,16 @@ p:not(.introText) {
     margin: 0% 2%
 }
 
-.picContainer {
+.profilePicContainer {
     width: 50%;
+}
+
+.resumePicContainer {
+    flex: 1;
+    background-color: color-mix(in srgb, #EFE3C2 80%, gray);
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 3px 3px gray inset;
 }
 
 .introText {
@@ -83,5 +107,9 @@ p:not(.introText) {
 }
 
 .jobText {
+    flex: 9;
+}
+
+.research {
     flex: 9;
 }
