--- a/src/app/header.css
+++ b/src/app/header.css
@@ -19,4 +19,33 @@ header {
   /* text */
   color: white;
   text-align: center;
+
+  /* display */
+  display: flex;
+}
+
+.leftTyroContainer {
+  flex: 1;
+  order: 0;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.headerText {
+  flex: 8;
+  order: 1;
+  height: 100%;
+  text-align: center;
+  font-size: 100%;
+  vertical-align: middle;
+}
+
+.rightTyroContainer {
+  flex: 1;
+  order: 2;
+  height: 100%;
+  text-align: center;
+  vertical-align: middle;
+  transform: scaleX(-1);
 }
