--- a/src/app/resume.css
+++ b/src/app/resume.css
@@ -1,16 +1,12 @@
 :root {
-    --intro-height: 20%;
+    --intro-height: 10%;
 }
 
 .sameLine {display: flex;}
 
 main {
     padding: 1.25%;
-    overflow: auto;
-}
-
-h1 {
-    text-align: center;
+    overflow: scroll;
 }
 
 h2, h3 {
@@ -27,12 +23,13 @@ h4 {
 }
 
 i {
-    padding-right: 2%;
+    /* padding-right: 2%; */
     width: 50%;
     text-align: right;
 }
 
-img {
+img:not(.introPic) {
+    padding: 5%;
     max-width: 100%;
     max-height: 100%;
     display: inline-block;
@@ -40,8 +37,20 @@ img {
     object-fit: scale-down;
 }
 
-img:not(.introPic) {
-    padding: 5%;
+.resume {
+    flex: 7;
+    order: 0;
+    padding-right: 1%;
+}
+
+.projects {
+    flex: 1;
+    order: 1;
+}
+
+.projectsTitle {
+    width: 100%;
+    text-align: center;
 }
 
 #intro {
@@ -67,7 +76,9 @@ p:not(.introText) {
 }
 
 .profilePicContainer {
-    width: 50%;
+    flex: 1;
+    display: flex;
+    justify-content: right;
 }
 
 .resumePicContainer {
@@ -79,26 +90,16 @@ p:not(.introText) {
 }
 
 .introText {
-    width: 50%;
+    order: 0;
+    flex: 1;
     height: 100%;
 }
 
 .introPic {
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-}
-
-.leftIntro {
-    width: 50%;
-    height: var(--intro-height);
-}
-
-.rightIntro {
-    width: 50%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+    margin-right: 0;
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: scale-down;
 }
 
 .logo {
@@ -107,9 +108,9 @@ p:not(.introText) {
 }
 
 .jobText {
-    flex: 9;
+    flex: 8;
 }
 
 .research {
-    flex: 9;
+    flex: 8;
 }
