updated resume and global css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,37 +25,14 @@
 
 body {
   width: 100vw;
-  /* color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif; */
-}
-
-.container0 {
-  /* children */
-  display: block;
-  position: relative;
-  
-  /* size */
   height: 100vh;
-  width: 100vw;
-
-  /* edges */
-  margin: 0;
-  border: 0;
-  padding: 0;
-
-  /* styles */
-  overflow: hidden;
-
-  /* interior */
-  background-color: #178925;
+  background-color: #3E7B27;
 }
 
 header {
   height: 10%;
   width: 100%;
 
-  color: white;
   z-index: 1;
 }
 
@@ -75,47 +52,5 @@ nav {
   /* styles */
   list-style-type: none;
   overflow: auto;
-}
-
-main {
-  /* children */
-  display: flex;
-  flex-direction: column;
-
-  /* position */
-  order: 0;
-  position: relative;
-  z-index: 1;
-
-  /* size */
-  height: 100%;
-  flex: 9;
-
-  /* edges */
-  margin: 0;
-  border: 0;
-  padding: 0;
-  box-shadow: 0 0 5px 3px gray inset;
-
-  background-color: #f1ead7;
-}
-
-.notHeader {
-  /* children */
-  display: flex;
-
-  /* size */
-  height: 90%;
-  width: 100%;
-
-  background-color: var(--foreground);
-}
-
-ul {
-  list-style-type: circle;
-}
-
-li {
-  list-style: circle;
 }
 
